Stop long note names from overflowing

--- a/src/styles/note.scss
+++ b/src/styles/note.scss
@@ -36,6 +36,9 @@
 .noteName {
     margin-bottom: 2px;
     height: 20px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .noteContainer.active .noteName {
